Closed Bug 1689237 Opened 3 years ago Closed 3 years ago

Window splits into boxes in mission control

Categories

(Core :: Graphics, defect)

defect

Tracking

()

RESOLVED FIXED
87 Branch
Tracking Status
firefox87 --- fixed

People

(Reporter: mossop, Assigned: mstange)

Details

Attachments

(2 files)

When in mission control on macOS (zooms out to show all open application windows) I frequently see Firefox look like its UI is made up of multiple boxes. It's a bit hard to explain so see the screenshot attached.

It generally only happens when Firefox has focus when entering mission control. It happens regardless of whether webrender is on or not, though with webrender there seem to be less boxes. I don't see this with any other apps and have been seeing it for some time.

Running current Nightly on macOS 11.1

Severity: -- → S3
Flags: needinfo?(mstange.moz)

Maybe we can set CALayer antialiasing flags to avoid this.

Flags: needinfo?(mstange.moz)

Testcase: data:text/html,<html style="background:rgb(80,80,80)">

We currently don't ever set non-rectilinear transforms on our CALayers, so there
is no need for anti-aliasing. Explicitly disabling edge anti-aliasing means that
there are no seams between tiles when the window server draws our window with a
transform, such as during Mission Control.

Assignee: nobody → mstange.moz
Status: NEW → ASSIGNED
Pushed by mstange@themasta.com:
https://hg.mozilla.org/integration/autoland/rev/71864dbafd9f
Disable CALayer edge anti-aliasing. r=mattwoodrow
Status: ASSIGNED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → 87 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: