Bug 1689237 - Disable CALayer edge anti-aliasing. r=mattwoodrow

We currently don't ever set non-rectilinear transforms on our CALayers, so there
is no need for anti-aliasing. Explicitly disabling edge anti-aliasing means that
there are no seams between tiles when the window server draws our window with a
transform, such as during Mission Control.

Differential Revision: https://phabricator.services.mozilla.com/D103740